app-config/templates/tmp/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-08-09T14:46:45Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: mprabhan-quotes-dev
    resourceVersion: "113372503"
    selfLink: /api/v1/namespaces/mprabhan-quotes-dev/services/quotesapi
    uid: 2548d509-da4f-11ea-8f83-12f1c648b1b9
  spec:
    clusterIP: 172.30.182.236
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: quotesapi
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-08-09T14:46:04Z"
    labels:
      app: quotesdb
    name: quotesdb
    namespace: mprabhan-quotes-dev
    resourceVersion: "113372140"
    selfLink: /api/v1/namespaces/mprabhan-quotes-dev/services/quotesdb
    uid: 0d140d87-da4f-11ea-8f83-12f1c648b1b9
  spec:
    clusterIP: 172.30.41.40
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: quotesdb
      deploymentconfig: quotesdb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
